sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:10: error: value echange is not a member of Unit
possible cause: maybe a semicolon is missing before `value echange'?
    }echange(i+1,i);
     ^